--- a/source/carta.html
+++ b/source/carta.html
@@ -43,7 +43,7 @@
 
     <main>
         <div class="visita">
-        <h1>Bienvenido a nuestro restaurante en Las Casitas del Arco Iris</h1>
+        <h1>Bienvenido a nuestro restaurante</h1>
              <h3>Aquí todos los platos se cocinan con mucho amor y dedicación. Nuestro menú es un reflejo del majestuoso lugar donde se encuentra el restaurante, así como del carácter y la personalidad del personal.</h3>
             <h1>Desayuno</h1>
             <h3>  El desayuno está incluido en nuestras tarifas. Servimos productos frescos y de temporada de nuestro jardín y de los alrededores.
@@ -93,10 +93,6 @@
 
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
