--- a/source/eventos.html
+++ b/source/eventos.html
@@ -56,7 +56,7 @@
                   <label for="exampleInputPassword1">Nombre Completo</label>
                   <input class="form-control">
                 </div>
-                <button type="button" class="btn btn-primary">ENVIAR SOLICITUD</button>
+                <button type="submit" class="btn btn-primary">ENVIAR SOLICITUD</button>
               </form> 
           </div>
     </main>
