--- a/source/eventos.html
+++ b/source/eventos.html
@@ -45,7 +45,7 @@
         <div class="reservas">
             <h1>Reservas</h1>
             <form>
-                <h3>En JOTAM te esperamos para que puedas disfrutar de una ocacion especial.</h3>
+                <h3>En JOTAM te esperamos para que puedas disfrutar de una ocacion especial</h3>
                 <h6>No dudes en contactarnos, contamos con varias opciones</h6>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Correo Electronico</label>
