--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </video>
                 <div class="videoSec__content">
                     <span class="videoSec__texto">JOTAM</span>
-                    <a href="source/RESERVAS.html" class="videoSec__link">
+                    <a href="source/reservas.html" class="videoSec__link">
                         <button type="button" class="btn btn-outline-light ">RESERVACIONES</button>
                     </a>
             </div>
