--- a/source/carta.html
+++ b/source/carta.html
@@ -24,6 +24,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar__menu navbar-nav ms-auto">
                         <li class="navbar__item nav-item">
+                        <li class="navbar__item nav-item">
+                            <a class="navbar__link nav-link" href="../index.html">INICIO</a>
+                        </li>
                             <a class="navbar__link nav-link" href="../source/nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="navbar__item nav-item">
