--- a/source/reservas.html
+++ b/source/reservas.html
@@ -24,6 +24,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar__menu navbar-nav ms-auto">
                         <li class="navbar__item nav-item">
+                        <li class="navbar__item nav-item">
+                            <a class="navbar__link nav-link" href="../index.html">INICIO</a>
+                        </li>
                             <a class="navbar__link nav-link" href="../source/nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="navbar__item nav-item">
@@ -42,6 +45,11 @@
     </header>
 
     <main>
+        <div class="text-center">
+        <h1>Reservas</h1>
+        <h3>En JOTAM te esperamos para que puedas disfrutar de una ocacion especial.</h3>
+        <h6>No dudes en contactarnos, contamos con varias opciones</h6>
+        </div>
         <div class="calendario">
             <div class="calendario-top">
                 <div class="month-selector">
@@ -67,10 +75,10 @@
                 <button class="date">6</button>
                 <button class="date">7</button>
                 <button class="date">8</button>
-                <button class="date current-day">9</button>
+                <button class="date">9</button>
                 <button class="date">10</button>
                 <button class="date">11</button>
-                <button class="date">12</button>
+                <button class="date_No">12</button>
                 <button class="date">13</button>
                 <button class="date">14</button>
                 <button class="date">15</button>
@@ -82,11 +90,11 @@
                 <button class="date">21</button>
                 <button class="date">22</button>
                 <button class="date">23</button>
-                <button class="date">24</button>
+                <button class="date_No">24</button>
                 <button class="date">25</button>
                 <button class="date">26</button>
                 <button class="date">27</button>
-                <button class="date">28</button>
+                <button class="date_No">28</button>
                 <button class="date">29</button>
                 <button class="date">30</button>
                 <button class="date">31</button>
@@ -95,19 +103,21 @@
                 <button class="date faded">3</button>
             </div>
         </div>
+        <div class="reservas">
+            <form>
+                <div class="form-group">
+                  <label for="exampleInputEmail1">Correo Electronico</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su correo">
+                  <small id="emailHelp" class="form-text text-muted">Enviaremos un mail con mas detalles.</small>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Nombre Completo</label>
+                  <input class="form-control">
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg">ENVIAR SOLICITUD</button>
+              </form> 
+          </div>
 
-        <div class="visita">
-            <h1>Visitenos</h1>
-            <h3>Av. Calchaqui 1997, Quilmes, Buenos Aires, Argentina. </h3>
-            <h3> Lun - Mar - Mie : 9.00 a 23.00
-                Jue - Vie - Sab : 9.00 a 24.00
-                Dom: 10.00 a 20.00</h3>
-                <h3>  Horario Delivery: Lun - Sab 12 a 22hs
-            </h3>
-            <h3>Tel.: 11-2233-4455
-            </h3>
-            
-        </div>
     </main>
 
 
