--- a/source/eventos.html
+++ b/source/eventos.html
@@ -24,6 +24,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar__menu navbar-nav ms-auto">
                         <li class="navbar__item nav-item">
+                        <li class="navbar__item nav-item">
+                            <a class="navbar__link nav-link" href="../index.html">INICIO</a>
+                        </li>                            
                             <a class="navbar__link nav-link" href="../source/nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="navbar__item nav-item">
@@ -42,23 +45,7 @@
     </header>
 
     <main>
-        <div class="reservas">
-            <h1>Reservas</h1>
-            <form>
-                <h3>En JOTAM te esperamos para que puedas disfrutar de una ocacion especial.</h3>
-                <h6>No dudes en contactarnos, contamos con varias opciones</h6>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Correo Electronico</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su correo">
-                  <small id="emailHelp" class="form-text text-muted">Enviaremos un mail con mas detalles.</small>
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Nombre Completo</label>
-                  <input class="form-control">
-                </div>
-                <button type="submit" class="btn btn-primary">ENVIAR SOLICITUD</button>
-              </form> 
-          </div>
+      
     </main>
 
     <footer class="bg-dark text-white py-5">
