--- a/source/eventos.html
+++ b/source/eventos.html
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="event">
                 <h2>Cena de Gala</h2>
-                <img src="img/cena-gala.jpg" alt="Cena de Gala">
+                <img src="../img/cena-gala.jpg" alt="Cena de Gala">
                 <p>Únete a nosotros para una noche elegante con un menú de cinco tiempos, música en vivo y una atmósfera inolvidable.</p>
                 <p><strong>Fecha:</strong> 25 de julio, 2024</p>
                 <p><strong>Hora:</strong> 8:00 PM</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="event">
                 <h2>Noche de Karaoke</h2>
-                <img src="img/karaoke.jpg" alt="Noche de Karaoke">
+                <img src="../img/karaoke.jpg" alt="Noche de Karaoke">
                 <p>Disfruta de una noche divertida con tus amigos cantando tus canciones favoritas. Premios para los mejores cantantes de la noche.</p>
                 <p><strong>Fecha:</strong> Todos los viernes</p>
                 <p><strong>Hora:</strong> 9:00 PM</p>
@@ -64,7 +64,7 @@
             </div>
             <div class="event">
                 <h2>Brunch Dominical</h2>
-                <img src="img/brunch.jpg" alt="Brunch Dominical">
+                <img src="../img/brunch.jpg" alt="Brunch Dominical">
                 <p>Ven a disfrutar de nuestro brunch especial con una variedad de platos deliciosos, mimosas y música en vivo.</p>
                 <p><strong>Fecha:</strong> Todos los domingos</p>
                 <p><strong>Hora:</strong> 11:00 AM - 3:00 PM</p>
