--- a/source/reservas.html
+++ b/source/reservas.html
@@ -108,7 +108,7 @@
                 <div class="form-group">
                   <label for="exampleInputEmail1">Correo Electronico</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su correo">
-                  <small id="emailHelp" class="form-text text-muted">Enviaremos un mail con mas detalles.</small>
+                  <small id="emailHelp" class="form-text text-muted">Enviaremos un mail con la posible disponibilidad de reserva.</small>
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Nombre Completo</label>
